dev/public/styles.css
* {
    margin: 0;
    padding: 0;
}

path {
    stroke-width: 1px;
}

html {
    background: linear-gradient(#c4edf5, #d6e0e4);
    min-height: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
}

body {
    width: 100%;
    height: 100%;
}

h1 {
    text-align: center;
    margin: 5% auto;
    font-family: 'Fredoka One', cursive;
}

.county-search-parent {
    display: flex;
    justify-content: center;
}

.county-search {
    width: 75%;
}

.map-parent {
    width: 100%;
}

#map {
    max-width: 375px;
    height: auto;
    margin: 0 auto;
}

#map_inner > div:nth-child(2), #map_inner > div:nth-child(3), #map_inner > div:nth-child(4) {
    visibility: hidden; /* attribution removal */
}

.parent {
    display: flex;
    flex-direction: column;
    margin: 10% auto;
}

form {
    display: flex;
}

.drop-down {
    margin: 0 auto;
    width: 60%;
    height: 50px;
    background: #6ebbe7;
    text-align-last: center;
    color: black;
    border: 5px solid black;
    border-radius: 10px;
    font-size: 24px;
    font-family: 'Fredoka One', cursive;
}

.slider {
    -webkit-appearance: none;
    background: black;
    margin: 5% auto 10px auto;
    width: 80%;
    height: 5px;
    color: black;
    border-radius: 40px;
    cursor: pointer;
}

.slider::-webkit-slider-thumb {
    -webkit-appearance: none;
    appearance: none;
    width: 25px;
    height: 25px;
    border-radius: 50%; 
    background: #6ebbe7;
    border: 5px solid black;
    cursor: pointer;
}

.slider::-moz-range-thumb {
    width: 25px;
    height: 25px;
    border-radius: 50%;
    background: #6ebbe7;
    border: 5px solid black;
    cursor: pointer;
}
#legendLabel {
    width: 80%;
    text-align: center;
    margin: 0 auto;
    letter-spacing: 5px;
}
.legend {
    margin: 0 auto 5% auto;
    width: 90%;
    height: 40px;
    text-align: center;
    color: black;
    border-top: 5px solid black;
    border-bottom: 5px solid black;
    border-left: 3px solid black;
    border-right: 3px solid black;
    border-radius: 15px;
    font-size: 24px;
    display: flex;
    overflow: hidden;
    flex-direction: row-reverse; /* can set direction as row on mobile for sort-descending legend */

}

.legend div {
    height: 100%;
    width: 100%;
    border-left: 2px solid black;
    border-right: 2px solid black;
    font-size: 14px;
    display: flex;
    align-items: center;
    justify-content: center;
}
/* .legend div:last-child {
    border-right: none;
} */
.legend div:nth-child(1) {
    background: #0b6739;
}
.legend div:nth-child(2) {
    background: #36a258;
}
.legend div:nth-child(3) {
    background: #7ac57d;
}
.legend div:nth-child(4) {
    background: #abdd94;
}
.legend div:nth-child(5) {
    background: #d9efa6;
}
.legend div:nth-child(6) {
    background: #fffecd;
}
.legend div:nth-child(7) {
    background: #ffffe5;
}

#noData {
    background: white;
}

#back-button {
    color: white;
    background: red;
    width: 60px;
    height: 40px;
    position: absolute;
    top: 8px;
    right: 8px;
}

#sliderLabel {
    display: flex;
    flex-direction: column;
    margin-bottom: 5%;
}
#sliderLabel div {
    display: flex;
    justify-content: space-between;
    width: 80%;
    margin: 0 auto;
}

.compare-form {
    display: flex;
    flex-direction: column;
    align-items: center;
    min-height: 100%;
    width: 100%;
}

.compare-state-selection {
    margin: 20px;
}

.line {
    background: black;
    height: 10px;
    width: 90%;
    margin: 50px;
}

.compare {
    background: #0b6739;
    margin: 5% auto;
}

#compare-modal {
    flex-direction: column;
    position: absolute;
    align-items: center;
    justify-content: space-around;
    width: 90%;
    height: 50%;
    background: linear-gradient(purple, white);
    border: black;
    left: 4%;
    top: 5%;
    border-radius: 20px;
    border: 5px solid black;
    box-shadow: black;
}

#compare-modal p {
    color: white;
    background: #00000063;
    width: 100%;
    text-align: center;
    height: auto;
    font-size: 40px;
}

.back {
    background: white;
}

